feat: added migration direction
