# docs/swagger.json
@@ -94,7 +94,7 @@
         },
         "/api/v1/projects/{id}/compare": {
             "get": {
-                "description": "initiates schema comparison from the source database to the target database for the specified project",
+                "description": "initiates schema comparison between source and target databases for the specified project",
                 "consumes": [
                     "application/json"
                 ],
@@ -104,7 +104,7 @@
                 "tags": [
                     "projects"
                 ],
-                "summary": "Compare database",
+                "summary": "Compare database schemas",
                 "parameters": [
                     {
                         "type": "string",
@@ -112,6 +112,13 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "left",
+                        "description": "Comparison direction (left or right)",
+                        "name": "direction",
+                        "in": "query"
                     }
                 ],
                 "responses": {
